<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/botella5"
    tools:context=".Nosotros">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="104dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/md_blue_800"
        android:text="PETSHOPPING"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />


    <Button
        android:id="@+id/Ubicación"
        android:layout_width="140dp"
        android:layout_height="65dp"
        android:background="@color/md_blue_900"
        android:text="@string/Ubicación"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <Button
        android:id="@+id/Clientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/md_blue_900"
        android:text="@string/Clientes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:id="@+id/Productos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/md_blue_900"
        android:text="@string/Productos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <MultiAutoCompleteTextView
        android:id="@+id/multiAutoCompleteTextView"
        android:layout_width="315dp"
        android:layout_height="289dp"
        android:autoSizeTextType="uniform"
        android:autoText="true"
        android:background="@color/md_blue_A100"
        android:breakStrategy="high_quality"
        android:capitalize="words"
        android:fontFamily="sans-serif-medium"
        android:pointerIcon="context_menu"
        android:scrollbarStyle="insideInset"
        android:text="somos una empresa dedicada a la compra y tranformación de plasticos PET en resinas las cuales serán refacturadas en nuevos productos de grado alimenticio. Mediante al compromiso y la respnsabilidad con la sociedad y el medio ambiente."
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textDirection="anyRtl"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="normal|bold|italic"
        android:typeface="sans"
        android:verticalScrollbarPosition="left"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309"
        tools:visibility="visible" />

    <Button
        android:id="@+id/Homego"
        android:layout_width="245dp"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Homego"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiAutoCompleteTextView"
        app:layout_constraintVertical_bias="0.967" />

</androidx.constraintlayout.widget.ConstraintLayout>